Add a line to contact me to About page

--- a/about.html
+++ b/about.html
@@ -44,6 +44,10 @@
                 I currently specialize in SEO, content creation, editing, and project management. I'm recognized for my consistency, adaptability, and organizational skills.
             </p>
             <br>
+            <p>
+                I'm open to full-time, freelance and remote work. <a href="contact.html">Contact me</a> to start a conversation!
+            </p>
+            <br>
 
             <a href="files/rocky-parker-resume.pdf" target="_blank" class="resume-link">Download My Resume</a>
             </section>
