--- a/work.html
+++ b/work.html
@@ -5,41 +5,25 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Rocky Parker | My Work</title>
         <link rel="shortcut icon" href="img/rocky-portfolio-logo.ico" type="image/x-icon">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <link rel="stylesheet" type="text/css" href="css/style.production.css">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="css/styles-new.css">
     </head>
+
     <body>
+
+        <!-- Header -->
         <header class="page-header">
-            <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #223759;">
-                <a class="navbar-brand" href="#">
-                  <img src="img/rocky-portfolio-logo.svg" width="100" class="d-inline-block align-top" alt="">
-                  Rocky Parker
-                </a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
-                </button>
-              
-                <div class="collapse navbar-collapse" id="navbarNav">
-                  <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                      <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="about.html">About Rocky</a>
-                    </li>
-                    <li class="nav-item active">
-                      <a class="nav-link" href="work.html">Rocky's Work</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="contact.html">Contact</a>
-                    </li>      
-                  </ul>
-                </div>
-              </nav>
+            <a href="index.html">
+                <img src="img/rocky-parker-name-logo.png" width="100" alt="Rocky Parker logo">
+            </a>
+            <nav>         
+                <ul>
+                <li><a href="about.html">About Me</a></li>
+                <li><a href="work.html">My Work</a></li>
+                <li><a href="contact.html">Contact Me</a></li>
+                </ul>
+            </nav>
         </header>
+
 
         <section>
             <h1 class="work-header">My Work</h1>
@@ -225,17 +209,17 @@
             </div>
         </section>
 
-        <footer class="page-footer">
-            <!-- Replace social media URLs in footer -->
-            <p><b>Connect with me!</b></p>
-            <div class="social-media">
-                <a href="https://www.linkedin.com/in/raquela-parker-009aa0129" target="_blank"><img src="img/linkedin-icon.svg" alt="LinkedIn icon" /></a>
-                <a href="https://github.com/RParker505/" target="_blank"><img src="img/github-icon.svg" alt="GitHub icon" /></a>
-            </div>
+        <!-- Footer -->
+        <footer>
+          <ul>
+            <li><a href="https://www.linkedin.com/in/raquela-parker-009aa0129" target="_blank">LinkedIn</a></li>
+            <li><a href="https://github.com/RParker505/" target="_blank">GitHub</a></li>
+          </ul>
         </footer>
-        <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+
+        <!-- <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script> -->
         <!-- Comment back in as needed for development -->
         <!-- <script src="js/tota11y.min.js"></script> -->
         <script src="js/promise-polyfill.js"></script>
