--- a/work.html
+++ b/work.html
@@ -35,7 +35,7 @@
 
             <div class="project-grid__item">
               <img src="img/portfolio-website-project.png" class="project-grid__item-photo" alt="A laptop, notebook paper and coffee on a tabletop" />
-              <h2><a href="https://rparker505.github.io/portfolio-website/" target="_blank">Portfolio Website</a></h2>
+              <h2>Portfolio Website</h2>
               <p>Yes, I'm talking about the website you're viewing right now! I created this multi-page, responsive website from scratch to highlight the projects I've built in my Full-Stack Web Development course.</p>
               <p><strong>Technologies used:</strong></p>
               <ul>
@@ -43,7 +43,7 @@
                 <li>CSS</li>
                 <li>Bootstrap</li>
               </ul>
-              <a href="https://github.com/RParker505/portfolio-website" target="_blank" class="project-link">View on GitHub</a>
+              <a href="https://github.com/RParker505/portfolio-website" target="_blank" class="project-link">GitHub</a>
             </div>
             
             <div class="project-grid__item">
@@ -62,7 +62,8 @@
                 <li>JavaScript</li>
                 <li>Bootstrap</li>
               </ul>
-              <a href="https://github.com/RParker505/pokedex-js-app" target="_blank" class="project-link">View on GitHub</a>
+              <a href="https://github.com/RParker505/pokedex-js-app" target="_blank" class="project-link">GitHub</a>
+              <a href="https://rparker505.github.io/pokedex-js-app/" target="_blank" class="project-link">Live App</a>
           </div>
 
           <div class="project-grid__item">
@@ -84,9 +85,9 @@
               <li>React Bootstrap</li>
               <li>Redux</li>
             </ul>
-            <a href="https://github.com/RParker505/movie_api" target="_blank" class="project-link">View server-side on GitHub</a><br>
-            <a href="https://github.com/RParker505/spookyVibes-client" target="_blank" class="project-link">View client-side on GitHub</a><br>
-            <a href="files/spookyvibes-case-study.pdf" target="_blank" class="project-link">View Case Study</a>
+            <a href="https://github.com/RParker505/movie_api" target="_blank" class="project-link">Server-Side</a><br>
+            <a href="https://github.com/RParker505/spookyVibes-client" target="_blank" class="project-link">Client-Side</a><br>
+            <a href="files/spookyvibes-case-study.pdf" target="_blank" class="project-link">Case Study</a>
           </div>
 
           <div class="project-grid__item">
@@ -106,12 +107,12 @@
                 <li>Puppeteer</li>
                 <li>Recharts</li>
               </ul>
-              <a href="https://github.com/RParker505/meet" target="_blank" class="project-link">View on GitHub</a>
+              <a href="https://github.com/RParker505/meet" target="_blank" class="project-link">GitHub</a>
           </div>
 
           <div class="project-grid__item">
             <img src="img/recipe-app-django.png" class="project-grid__item-photo" alt="Django Recipe app screenshot" />
-            <h2>Recipe App (Coming Soon!)</h2>
+            <h2>Recipe App</h2>
             <p>
               In this app, I used the Django web framework to rebuild a command-line-only recipe app into a fully fledged web application with multiple users and an admin panel.
             </p>
@@ -128,9 +129,9 @@
               <li>HTML</li>
               <li>CSS</li>
             </ul>
-            <a href="https://github.com/RParker505/recipe-app" target="_blank" class="project-link">View on GitHub</a><br>
-            <a href="" target="_blank" class="project-link">View Deployed App (coming soon!)</a><br>
-            <a href="https://github.com/RParker505/python-django" target="_blank" class="project-link">View App Learning Progress</a><br>
+            <a href="https://github.com/RParker505/recipe-app" target="_blank" class="project-link">GitHub</a><br>
+            <a href="https://sheltered-harbor-88785-3ea99ac9b7d2.herokuapp.com/login/" target="_blank" class="project-link">Live App</a><br>
+            <a href="https://github.com/RParker505/python-django" target="_blank" class="project-link">Learning Progress</a><br>
           </div>
 
           <div class="project-grid__item">
@@ -148,7 +149,7 @@
               <li>MySQL</li>
               <li>SQLAlchemy</li>
             </ul>
-            <a href="https://github.com/RParker505/intro-to-python" target="_blank" class="project-link">View on GitHub</a><br>
+            <a href="https://github.com/RParker505/intro-to-python" target="_blank" class="project-link">GitHub</a><br>
           </div>
 
           <div class="project-grid__item">
@@ -163,7 +164,7 @@
               <li>CSS</li>
               <li>JQuery</li>
             </ul>
-            <a href="https://github.com/RParker505/to-do-list-app" target="_blank" class="project-link">View on GitHub</a>
+            <a href="https://github.com/RParker505/to-do-list-app" target="_blank" class="project-link">GitHub</a>
           </div>
 
           <div class="project-grid__item">
@@ -183,7 +184,7 @@
               <li>Google Firebase</li>
               <li>Gifted Chat</li>
             </ul>
-            <a href="https://github.com/RParker505/chat-app" target="_blank" class="project-link">View on GitHub</a>
+            <a href="https://github.com/RParker505/chat-app" target="_blank" class="project-link">GitHub</a>
           </div>
 
           <div class="project-grid__item">
@@ -202,7 +203,7 @@
               <li>TypeScript</li>
               <li>TypeDoc</li>
             </ul>
-            <a href="https://github.com/RParker505/spookyVibes-Angular-client" target="_blank" class="project-link">View on GitHub</a>
+            <a href="https://github.com/RParker505/spookyVibes-Angular-client" target="_blank" class="project-link">GitHub</a>
           </div>
 
           <div class="project-grid__item">
@@ -211,7 +212,7 @@
               <p>
                   In my current role as a marketing and public relations specialist, I regularly write conversational blog posts targeted to journalists and bloggers. I cover topics like media news, writing tips, upcoming events and more.
               </p>
-              <a href="https://authory.com/RockyParker" target="_blank" class="project-link">View Writing Examples</a>
+              <a href="https://authory.com/RockyParker" target="_blank" class="project-link">Writing Examples</a>
           </div>
 
           </section>
