Add line breaks to project cards

--- a/work.html
+++ b/work.html
@@ -36,7 +36,10 @@
             <div class="project-grid__item">
               <img src="img/portfolio-website-project.png" class="project-grid__item-photo" alt="A laptop, notebook paper and coffee on a tabletop" />
               <h2>Portfolio Website</h2>
-              <p>Yes, I'm talking about the website you're viewing right now! I created this multi-page, responsive website from scratch to highlight the projects I've built in my Full-Stack Web Development course.</p>
+              <p>
+                Yes, I'm talking about the website you're viewing right now! I created this multi-page, responsive website from scratch to highlight the projects I've built in my Full-Stack Web Development course.
+              </p>
+              <br>
               <p><strong>Technologies used:</strong></p>
               <ul>
                 <li>HTML</li>
@@ -55,6 +58,7 @@
               <p>
                 The dynamic JavaScript app allows users to scroll through a list of collapsed Pokemon items and expand for more details on-demand.
             </p>
+            <br>
             <p><strong>Technologies used:</strong></p>
               <ul>
                 <li>HTML</li>
@@ -75,6 +79,7 @@
             <p>
                 Users can register, sign in, get details about movies and add and remove them from their favorites using a dynamic interface.
             </p>
+            <br>
             <p><strong>Technologies used:</strong></p>
             <ul>
               <li>React</li>
@@ -99,6 +104,7 @@
               <p>
                 Users can search for events in a specific city and adjust the number of events displayed.
               </p>
+              <br>
               <p><strong>Technologies used:</strong></p>
               <ul>
                 <li>React</li>
@@ -119,6 +125,7 @@
             <p>
               Users can log in and create their own content. The app also has statistical dashboards, implementing data analytics and data visualization skills. Finally, the code features automatic testing scripts to prevent code errors and help with debugging.
             </p>
+            <br>
             <p><strong>Technologies used:</strong></p>
             <ul>
               <li>Python</li>
@@ -143,6 +150,7 @@
             <p>
               Users can create and modify recipes with ingredients, cooking time and a difficulty parameter that is automatically calculated by the app. Users are also able to search for recipes by their ingredients.
             </p>
+            <br>
             <p><strong>Technologies used:</strong></p>
             <ul>
               <li>Python</li>
@@ -158,6 +166,7 @@
             <p>
                 This is a basic to-do list that allows users to add, remove, cross out and reorder items on the list.
             </p>
+            <br>
             <p><strong>Technologies used:</strong></p>
             <ul>
               <li>HTML</li>
@@ -176,6 +185,7 @@
             <p>
                 The app provides users with a chat interface and options to share images and their location. It's optimized for both Android and iOS devices.
             </p>
+            <br>
             <p><strong>Technologies used:</strong></p>
             <ul>
               <li>React Native</li>
@@ -196,6 +206,7 @@
             <p>
                 Users can still register, sign in, get details about movies and add and remove them from their favorites using a dynamic interface.
             </p>
+            <br>
             <p><strong>Technologies used:</strong></p>
             <ul>
               <li>Angular</li>
