Remove a project hyperlink for consistency

--- a/work.html
+++ b/work.html
@@ -51,7 +51,7 @@
             
             <div class="project-grid__item">
               <img src="img/pokedex-app.png" class="project-grid__item-photo" alt="Pokedex App beneath logo of Pikachu reading a book" />
-              <h2><a href="https://rparker505.github.io/pokedex-js-app/" target="_blank">Pokedex App</a></h2>
+              <h2>Pokedex App</h2>
               <p>
                   In this project, I built a small web application that loads data from an external API to display 100 Pokemons and their details.
               </p>
