Changed project hyperlink to a button

--- a/work.html
+++ b/work.html
@@ -201,7 +201,7 @@
             <img src="img/spookyvibes-angular.png" class="project-grid__item-photo" alt="SpookyVibes app screenshot" />
             <h2>SpookyVibes - Angular</h2>
             <p>
-                Using Angular, I rebuilt the client-side for <a href="https://rparker505.github.io/spookyVibes-Angular-client/welcome" target="_blank">SpookyVibes</a>. I built the new single-page, responsive app to include several interface views that handle data through the previously-defined REST API endpoints.
+                Using Angular, I rebuilt the client-side for SpookyVibes. I built the new single-page, responsive app to include several interface views that handle data through the previously-defined REST API endpoints.
             </p>
             <p>
                 Users can still register, sign in, get details about movies and add and remove them from their favorites using a dynamic interface.
@@ -215,6 +215,7 @@
               <li>TypeDoc</li>
             </ul>
             <a href="https://github.com/RParker505/spookyVibes-Angular-client" target="_blank" class="project-link">GitHub</a>
+            <a href="https://rparker505.github.io/spookyVibes-Angular-client/welcome" target="_blank" class="project-link">Live App</a>
           </div>
 
           <div class="project-grid__item">
