Simplify project descriptions

--- a/work.html
+++ b/work.html
@@ -37,14 +37,13 @@
               <img src="img/portfolio-website-project.png" class="project-grid__item-photo" alt="A laptop, notebook paper and coffee on a tabletop" />
               <h2>Portfolio Website</h2>
               <p>
-                Yes, I'm talking about the website you're viewing right now! I created this multi-page, responsive website from scratch to highlight the projects I've built in my Full-Stack Web Development course.
+                Yes, I'm talking about the website you're viewing right now! I created this multi-page, responsive website from using only HTML and CSS to highlight the projects I've built in my Full-Stack Web Development course.
               </p>
               <br>
               <p><strong>Technologies used:</strong></p>
               <ul>
                 <li>HTML</li>
                 <li>CSS</li>
-                <li>Bootstrap</li>
               </ul>
               <a href="https://github.com/RParker505/portfolio-website" target="_blank" class="project-link">GitHub</a>
             </div>
@@ -53,31 +52,25 @@
               <img src="img/pokedex-app.png" class="project-grid__item-photo" alt="Pokedex App beneath logo of Pikachu reading a book" />
               <h2>Pokedex App</h2>
               <p>
-                  In this project, I built a small web application that loads data from an external API to display 100 Pokemons and their details.
+                  Pokedex is a small web application that loads data from an external API to display 100 Pokemons and their details. The dynamic JavaScript app allows users to scroll through a list of collapsed Pokemon items and expand for more details on-demand.
               </p>
-              <p>
-                The dynamic JavaScript app allows users to scroll through a list of collapsed Pokemon items and expand for more details on-demand.
-            </p>
-            <br>
-            <p><strong>Technologies used:</strong></p>
-              <ul>
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>JavaScript</li>
-                <li>Bootstrap</li>
-              </ul>
-              <a href="https://github.com/RParker505/pokedex-js-app" target="_blank" class="project-link">GitHub</a>
-              <a href="https://rparker505.github.io/pokedex-js-app/" target="_blank" class="project-link">Live App</a>
-          </div>
+              <br>
+              <p><strong>Technologies used:</strong></p>
+                <ul>
+                  <li>HTML</li>
+                  <li>CSS</li>
+                  <li>JavaScript</li>
+                  <li>Bootstrap</li>
+                </ul>
+                <a href="https://github.com/RParker505/pokedex-js-app" target="_blank" class="project-link">GitHub</a>
+                <a href="https://rparker505.github.io/pokedex-js-app/" target="_blank" class="project-link">Live App</a>
+            </div>
 
           <div class="project-grid__item">
             <img src="img/spookyvibes.png" class="project-grid__item-photo" alt="SpookyVibes app screenshot" />
             <h2>SpookyVibes</h2>
             <p>
-                I used the MERN stack to build the client-side and user-side code for my horror movie app, <a href="https://spookyvibes.netlify.app/" target="_blank">SpookyVibes</a>.
-            </p>
-            <p>
-                Users can register, sign in, get details about movies and add and remove them from their favorites using a dynamic interface.
+                I used the MERN stack to build the client-side and user-side code for my horror movie app, SpookyVibes. Users can register, sign in, get details about movies and add and remove them from their favorites using a dynamic interface.
             </p>
             <br>
             <p><strong>Technologies used:</strong></p>
@@ -90,8 +83,9 @@
               <li>React Bootstrap</li>
               <li>Redux</li>
             </ul>
-            <a href="https://github.com/RParker505/movie_api" target="_blank" class="project-link">Server-Side</a><br>
-            <a href="https://github.com/RParker505/spookyVibes-client" target="_blank" class="project-link">Client-Side</a><br>
+            <a href="https://github.com/RParker505/movie_api" target="_blank" class="project-link">Server-Side</a>
+            <a href="https://github.com/RParker505/spookyVibes-client" target="_blank" class="project-link">Client-Side</a>
+            <a href="https://spookyvibes.netlify.app/" target="_blank" class="project-link">Live App</a>
             <a href="files/spookyvibes-case-study.pdf" target="_blank" class="project-link">Case Study</a>
           </div>
 
@@ -99,10 +93,7 @@
             <img src="img/meet-app.png" class="project-grid__item-photo" alt="Screenshot of Meet App" />  
               <h2>Meet App</h2>
               <p>
-                  The <a href="https://rparker505.github.io/meet/" target="_blank">Meet App</a> is a serverless, progressive web application (PWA) built with React using a test-driven development (TDD) technique. The application uses a Google Calendar API to fetch upcoming events.
-              </p>
-              <p>
-                Users can search for events in a specific city and adjust the number of events displayed.
+                  The Meet App is a serverless, progressive web application (PWA) built with React using a test-driven development (TDD) technique. The application uses a Google Calendar API to fetch upcoming events. Users can search for events in a specific city and adjust the number of events displayed.
               </p>
               <br>
               <p><strong>Technologies used:</strong></p>
@@ -114,16 +105,14 @@
                 <li>Recharts</li>
               </ul>
               <a href="https://github.com/RParker505/meet" target="_blank" class="project-link">GitHub</a>
+              <a href="https://rparker505.github.io/meet/" target="_blank" class="project-link">Live App</a>
           </div>
 
           <div class="project-grid__item">
             <img src="img/recipe-app-django.png" class="project-grid__item-photo" alt="Django Recipe app screenshot" />
             <h2>Recipe App</h2>
             <p>
-              In this app, I used the Django web framework to rebuild a command-line-only recipe app into a fully fledged web application with multiple users and an admin panel.
-            </p>
-            <p>
-              Users can log in and create their own content. The app also has statistical dashboards, implementing data analytics and data visualization skills. Finally, the code features automatic testing scripts to prevent code errors and help with debugging.
+              I used the Django web framework to rebuild a command-line-only recipe app as a fully fledged web application with multiple users and an admin panel. Users can log in and create their own recipes. The app also has statistical dashboards, implementing data analytics and data visualization. The code features automatic testing scripts to prevent code errors and help with debugging.
             </p>
             <br>
             <p><strong>Technologies used:</strong></p>
@@ -136,19 +125,16 @@
               <li>HTML</li>
               <li>CSS</li>
             </ul>
-            <a href="https://github.com/RParker505/recipe-app" target="_blank" class="project-link">GitHub</a><br>
-            <a href="https://sheltered-harbor-88785-3ea99ac9b7d2.herokuapp.com/login/" target="_blank" class="project-link">Live App</a><br>
-            <a href="https://github.com/RParker505/python-django" target="_blank" class="project-link">Learning Progress</a><br>
+            <a href="https://github.com/RParker505/recipe-app" target="_blank" class="project-link">GitHub</a>
+            <a href="https://sheltered-harbor-88785-3ea99ac9b7d2.herokuapp.com/login/" target="_blank" class="project-link">Live App</a>
+            <a href="https://github.com/RParker505/python-django" target="_blank" class="project-link">Learning Progress</a>
           </div>
 
           <div class="project-grid__item">
             <img src="img/recipe-app-cli.png" class="project-grid__item-photo" alt="Command Line Recipe app screenshot" />
             <h2>Recipe App (Command Line)</h2>
             <p>
-              In this app, I familiarized myself with Python fundamentals, data structures and object-oriented programming to build a command line application for a Recipe app.
-            </p>
-            <p>
-              Users can create and modify recipes with ingredients, cooking time and a difficulty parameter that is automatically calculated by the app. Users are also able to search for recipes by their ingredients.
+              In this app, I familiarized myself with Python fundamentals, data structures and object-oriented programming to build a command line application for a Recipe app. Users can create and modify recipes with ingredients, cooking time and a difficulty parameter that is automatically calculated by the app. Users are also able to search for recipes by their ingredients.
             </p>
             <br>
             <p><strong>Technologies used:</strong></p>
@@ -157,14 +143,14 @@
               <li>MySQL</li>
               <li>SQLAlchemy</li>
             </ul>
-            <a href="https://github.com/RParker505/intro-to-python" target="_blank" class="project-link">GitHub</a><br>
+            <a href="https://github.com/RParker505/intro-to-python" target="_blank" class="project-link">GitHub</a>
           </div>
 
           <div class="project-grid__item">
             <img src="img/to-do-list-app.png" class="project-grid__item-photo" alt="Person preparing to write on a to-do list" />
-            <h2>Simple To-Do List</h2>
+            <h2>To-Do List</h2>
             <p>
-                This is a basic to-do list that allows users to add, remove, cross out and reorder items on the list.
+                This is a simple to-do list that allows users to add, remove, cross out and reorder items on the list.
             </p>
             <br>
             <p><strong>Technologies used:</strong></p>
@@ -180,10 +166,7 @@
             <img src="img/chat-app.png" class="project-grid__item-photo" alt="SpookyVibes app screenshot" />
             <h2>Chat App</h2>
             <p>
-                I used React Native, Expo, and Google Firestore Database to build this native chat app.
-            </p>
-            <p>
-                The app provides users with a chat interface and options to share images and their location. It's optimized for both Android and iOS devices.
+                I used React Native, Expo, and Google Firestore Database to build this mobile native chat app. It provides users with a chat interface and options to share images and their location. It's optimized for both Android and iOS devices.
             </p>
             <br>
             <p><strong>Technologies used:</strong></p>
@@ -201,10 +184,7 @@
             <img src="img/spookyvibes-angular.png" class="project-grid__item-photo" alt="SpookyVibes app screenshot" />
             <h2>SpookyVibes - Angular</h2>
             <p>
-                Using Angular, I rebuilt the client-side for SpookyVibes. I built the new single-page, responsive app to include several interface views that handle data through the previously-defined REST API endpoints.
-            </p>
-            <p>
-                Users can still register, sign in, get details about movies and add and remove them from their favorites using a dynamic interface.
+                Using Angular, I rebuilt the client-side for SpookyVibes. The new single-page, responsive app includes several interface views that handle data through previously-defined REST API endpoints. Users can register, sign in, get details about movies and add and remove them from their favorites using a dynamic interface.
             </p>
             <br>
             <p><strong>Technologies used:</strong></p>
