Update header hyperlink

--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 
         <!-- Header -->
         <header class="page-header">
-          <a href="#">
+          <a href="index.html">
             <img src="img/rocky-parker-name-logo.png" width="100" alt="Rocky Parker logo">
           </a>
           <nav>         
