Replace resume with latest version

--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
             </p>
             <br>
 
-            <a href="files/rocky-parker-resume.pdf" target="_blank" class="resume-link">Download My Resume</a>
+            <a href="files/rocky-parker-resume.pdf" target="_blank" class="resume-link">View My Resume</a>
             </section>
 
             <section class="skills">
