Add link to live To-Do List project

--- a/work.html
+++ b/work.html
@@ -160,6 +160,7 @@
               <li>JQuery</li>
             </ul>
             <a href="https://github.com/RParker505/to-do-list-app" target="_blank" class="project-link">GitHub</a>
+            <a href="https://rparker505.github.io/to-do-list-app/" target="_blank" class="project-link">Live App</a>
           </div>
 
           <div class="project-grid__item">
