Reordered several projects to highlight bigger projects

--- a/work.html
+++ b/work.html
@@ -90,6 +90,24 @@
           </div>
 
           <div class="project-grid__item">
+            <img src="img/spookyvibes-angular.png" class="project-grid__item-photo" alt="SpookyVibes app screenshot" />
+            <h2>SpookyVibes (Angular)</h2>
+            <p>
+                Using Angular, I rebuilt the client-side for SpookyVibes. The new single-page, responsive app includes several interface views that handle data through previously-defined REST API endpoints. Users can register, sign in, get details about movies and add and remove them from their favorites using a dynamic interface.
+            </p>
+            <br>
+            <p><strong>Technologies used:</strong></p>
+            <ul>
+              <li>Angular</li>
+              <li>Angular Material</li>
+              <li>TypeScript</li>
+              <li>TypeDoc</li>
+            </ul>
+            <a href="https://github.com/RParker505/spookyVibes-Angular-client" target="_blank" class="project-link">GitHub</a>
+            <a href="https://rparker505.github.io/spookyVibes-Angular-client/welcome" target="_blank" class="project-link">Live App</a>
+          </div>
+
+          <div class="project-grid__item">
             <img src="img/meet-app.png" class="project-grid__item-photo" alt="Screenshot of Meet App" />  
               <h2>Meet App</h2>
               <p>
@@ -147,23 +165,6 @@
           </div>
 
           <div class="project-grid__item">
-            <img src="img/to-do-list-app.png" class="project-grid__item-photo" alt="Person preparing to write on a to-do list" />
-            <h2>To-Do List</h2>
-            <p>
-                This is a simple to-do list that allows users to add, remove, cross out and reorder items on the list.
-            </p>
-            <br>
-            <p><strong>Technologies used:</strong></p>
-            <ul>
-              <li>HTML</li>
-              <li>CSS</li>
-              <li>JQuery</li>
-            </ul>
-            <a href="https://github.com/RParker505/to-do-list-app" target="_blank" class="project-link">GitHub</a>
-            <a href="https://rparker505.github.io/to-do-list-app/" target="_blank" class="project-link">Live App</a>
-          </div>
-
-          <div class="project-grid__item">
             <img src="img/chat-app.png" class="project-grid__item-photo" alt="SpookyVibes app screenshot" />
             <h2>Chat App</h2>
             <p>
@@ -182,21 +183,20 @@
           </div>
 
           <div class="project-grid__item">
-            <img src="img/spookyvibes-angular.png" class="project-grid__item-photo" alt="SpookyVibes app screenshot" />
-            <h2>SpookyVibes - Angular</h2>
+            <img src="img/to-do-list-app.png" class="project-grid__item-photo" alt="Person preparing to write on a to-do list" />
+            <h2>To-Do List</h2>
             <p>
-                Using Angular, I rebuilt the client-side for SpookyVibes. The new single-page, responsive app includes several interface views that handle data through previously-defined REST API endpoints. Users can register, sign in, get details about movies and add and remove them from their favorites using a dynamic interface.
+                This is a simple to-do list that allows users to add, remove, cross out and reorder items on the list.
             </p>
             <br>
             <p><strong>Technologies used:</strong></p>
             <ul>
-              <li>Angular</li>
-              <li>Angular Material</li>
-              <li>TypeScript</li>
-              <li>TypeDoc</li>
+              <li>HTML</li>
+              <li>CSS</li>
+              <li>JQuery</li>
             </ul>
-            <a href="https://github.com/RParker505/spookyVibes-Angular-client" target="_blank" class="project-link">GitHub</a>
-            <a href="https://rparker505.github.io/spookyVibes-Angular-client/welcome" target="_blank" class="project-link">Live App</a>
+            <a href="https://github.com/RParker505/to-do-list-app" target="_blank" class="project-link">GitHub</a>
+            <a href="https://rparker505.github.io/to-do-list-app/" target="_blank" class="project-link">Live App</a>
           </div>
 
           <div class="project-grid__item">
