Update text in Contact Me card

--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
           <div class="contact-card">
             <img src="img/contact-bubbles.png" alt="A speech bubble chat bubble" class="contact-card__photo">
             <div class="contact-card__details">
-              <p>If you like my work and would like to discuss how I can help you and your team reach your goals, reach out today!</p>
+              <p>If you like my work and would like to discuss how I can help you and your team reach your goals, connect with me today!</p>
               <br>
               <p><strong>Location:</strong> Albuquerque, NM</p>
               <p><strong>Timezone:</strong> Mountain Standard Time</p>
