--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <!-- Footer -->
         <footer>
           <ul>
-            <li><a href="https://www.linkedin.com/in/raquela-parker-009aa0129" target="_blank">LinkedIn</a></li>
+            <li><a href="https://www.linkedin.com/in/raquela-parker/" target="_blank">LinkedIn</a></li>
             <li><a href="https://github.com/RParker505/" target="_blank">GitHub</a></li>
           </ul>
         </footer>
